hphp/hack/test/typecheck/global_const7.php.exp
File "global_const7.php", line 3, characters 11-12:
Invalid expression in constant initializer (Parsing[1002])
File "global_const7.php", line 3, characters 11-12:
Illegal constant value (Naming[2023])
